# ai-platform-bootloader

./: .gitignore  BOOTLOADER-ARCHITECTURE.md  GETTING_STARTED.md  README.md  __init__.py  bootstrap.sh  cli.py  pyproject.toml
lib/: __init__.py  plugin_system.py  state_manager.py
plugins/: __init__.py  dashboard.py  directories.py  docker.py  gitnexus.py  hermes_agent.py  hermes_config.py  maintenance_scripts.py  mempalace.py  nodejs.py  ollama.py  open_design.py  openclaw.py  openclaw_config.py  pnpm.py  security_hardening.py  system_deps.py  systemd_services.py
tests/: __init__.py  test_maintenance_scripts.py  test_mempalace.py  test_open_design.py  test_openclaw.py  test_openclaw_config.py  test_plugins.py  test_pnpm.py  test_security_hardening.py  test_systemd_services.py
